# jsx

./: .gitignore  app.py  requirements.txt  start.bat
workshop3d_publisher/: .gitignore  README.md  autostart_setup.bat  install.bat  pyproject.toml  requirements.txt  run.bat
workshop3d_publisher/config/: config.example.yaml
workshop3d_publisher/src/workshop3d/: __init__.py  __main__.py  brand_renderer.py  config.py  file_validator.py  folder_watcher.py  link_manager.py  metadata_generator.py  models.py  notification_service.py  package_builder.py  pipeline.py  product_analyzer.py  publication_manager.py  report.py  state_store.py  text_utils.py
workshop3d_publisher/src/workshop3d/adapters/: __init__.py  base.py
workshop3d_publisher/src/workshop3d/adapters/social/: __init__.py  facebook.py  instagram.py  tiktok.py  youtube.py
workshop3d_publisher/src/workshop3d/adapters/stores/: __init__.py  creality_cn.py  creality_eu.py  cults3d.py  thangs.py
workshop3d_publisher/src/workshop3d/dashboard/: __init__.py  app.py
workshop3d_publisher/src/workshop3d/dashboard/templates/: index.html
workshop3d_publisher/tests/: conftest.py  test_file_validator.py  test_metadata_and_analyzer.py  test_pipeline.py  test_watcher_stability.py
